--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -2,9 +2,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>be.freels.maven.plugins</groupId>
+        <groupId>org.codehaus.groovyc</groupId>
         <artifactId>groovyc-maven-plugin-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
     <artifactId>groovyc-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
@@ -15,7 +15,7 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>be.freels.maven.plugins</groupId>
+            <groupId>org.codehaus.groovyc</groupId>
             <artifactId>groovyc-maven-executor</artifactId>
             <version>${project.version}</version>
         </dependency>
