--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,9 @@
     <properties>
         <mavenVersion>2.0</mavenVersion>
     </properties>
+    <scm>
+        <connection>scm:git:ssh://github.com:fpape/groovyc-maven-plugin.git</connection>
+    </scm>
     <modules>
         <module>executor</module>
         <module>plugin</module>
