--- a/executor/pom.xml
+++ b/executor/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.codehaus.groovyc</groupId>
         <artifactId>groovyc-maven-plugin-parent</artifactId>
-        <version>0.1.1-SNAPSHOT</version>
+        <version>0.1.1</version>
     </parent>
     <artifactId>groovyc-maven-executor</artifactId>
     <packaging>jar</packaging>
