--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>org.codehaus.groovyc</groupId>
     <artifactId>groovyc-maven-plugin-parent</artifactId>
     <packaging>pom</packaging>
-    <version>0.1.1</version>
+    <version>0.1.2-SNAPSHOT</version>
     <name>groovyc-maven-plugin-parent Maven Mojo</name>
     <url>http://maven.apache.org</url>
     <properties>
